--- a/docs/do11y/style/index.scss
+++ b/docs/do11y/style/index.scss
@@ -109,6 +109,10 @@ body > footer {
   color: var(--pink-80);
 
   border-block-start: var(--invisible-border);
+
+  @media (width <= 46rem) {
+    padding-block: var(--spacing-xl);
+  }
 }
 
 a[href^="https://github.com"] {
